--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><strong>LinkedIn:</strong> <a href="#">coming soon</a></li>
   </ul>
 
-  <table>
+  <table border="1">
     <tr>
       <th>TV Shows</th>
       <th>Movies</th>
